# libuiomux

./: AUTHORS  Android.mk  README  README.md  TODO  config.h.in  configure.ac  uiomux-uninstalled.pc.in  uiomux.pc.in
doc/: Makefile.am  uiomux.1
include/uiomux/: Makefile.am  arch_sh.h  dump.h  resource.h  system.h  uiomux.h  uiomux_blocks.h
release_notes/: libuiomux-1.0.0.txt  libuiomux-1.1.0.txt  libuiomux-1.2.0.txt
src/examples/: Makefile.am
src/libuiomux/: Android.mk  Makefile.am  Version_script.in  dump.c  state.c  uio.c  uio.h  uiomux.c  uiomux_private.h
src/tests/: Android.mk  Makefile.am  double-open.c  exit-locked.c  fork-threads.c  fork.c  lock-unlock.c  multiple-open.c  noop.c  threads.c  uiomux_tests.h
src/tools/: Android.mk  Makefile.am  uiomux-alloc.c  uiomux.c
